Use z-index to fix issue #11

--- a/sass/plugins.scss
+++ b/sass/plugins.scss
@@ -11,6 +11,8 @@
    ========================================================================== */
 
 .rah_ui_container {
+    position: relative;
+    z-index: 1;
     width: auto !important;
 }
 
