--- a/sass/textpattern.scss
+++ b/sass/textpattern.scss
@@ -161,10 +161,10 @@ hr {
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: 20000;
     text-align: center;
     span {
         position: relative;
+        z-index: 20000;
         @include inline-block;
         @include border-radius($border-radius $border-radius 0 0);
         margin: 0 auto;
@@ -533,6 +533,8 @@ body {
 }
 
 .txp-container {
+    position: relative;
+    z-index: 1;
     max-width: 110em; // 1430px / 13px
     margin: 0 auto;
 }
@@ -724,6 +726,8 @@ body {
    ========================================================================== */
 
 #txp-foot {
+    position: relative;
+    z-index: 1;
     @extend .clearfix;
 }
 
